# opengl_demo

./: .gitignore  .ycm_extra_conf.py  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
include/: mMeshRender.h  mOpenGLUtils.h  mRotateUtils.h  mShader.h
models/: test-0.6.ply
shaders/: multilight.frag
src/: CMakeLists.txt  Makefile  cmake_install.cmake  mMeshRender.cpp  mOpenGLUtils.cpp  mRotateUtils.cpp  mShader.cpp
