CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(OPENGL_TEST)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(glfw3 REQUIRED)
FIND_PACKAGE(assimp REQUIRED)

SET(LINK_LIBS ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARIES} glfw ${ASSIMP_LIBRARIES})

SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_CXX_FLAGS "-std=c++11")
SET(CMAKE_EXE_LINKER_FLAGS "-L/usr/local/lib")

SET(CMAKE_BUILD_TYPE Debug)

INCLUDE_DIRECTORIES("./include")

ADD_SUBDIRECTORY(./src)
ADD_EXECUTABLE(main main.cpp)
TARGET_LINK_LIBRARIES(main glutils ${LINK_LIBS})

